modify  Twitter link,update Telegram to https://t.me/PalletOneGlobal in English index,modify Wechat Show status.

--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -511,19 +511,22 @@ ui,#qq{display:inline}
             <div class="right">
                 <ul class="list-inline pull-right" >
                     <li id="qq">
-						<a href="#"><img src="images/icon-bird.png"  width="30" height="30"></a>
+						<a href="https://twitter.com/PalletOne_org" target="view_window"><img src="images/icon-bird.png"  width="30" height="30"></a>
                     </li>
                     <li id="qq">
-						<a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"  width="30" height="30"></a>
+						<a href="https://www.facebook.com/profile.php?id=100026164972741" target="view_window"><img src="images/icon-f.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
-						<a href="https://t.me/palletchinese"><img src="images/telegram.png"  width="30" height="30"></a>
+						<a href="https://t.me/palletchinese" target="view_window"><img src="images/telegram.png"  width="30" height="30"></a>
                     </li>
-                    <li id="qq">
-						<a href="https://pallet.one/images/QRcode.jpg"><img src="images/wechat.png"  width="30" height="30"></a>
+                    <li id="qq" style="position: relative">
+                        <div style="width: 100px;height:100px;position: absolute;top:-115px;left:-36px;z-index: 999;display: none;" id="showWx">
+                            <img src="images/QRcode.jpg" width="100%" height="100%">
+                        </div>
+                        <img src="images/wechat.png"  width="30" height="30" id="wx" style="cursor: pointer">
                     </li>
 					<li id="qq">
-						<a href="https://github.com/PalletOne"><img src="images/github.png"  width="30" height="30"></a>
+						<a href="https://github.com/PalletOne" target="view_window"><img src="images/github.png"  width="30" height="30"></a>
                     </li>
                 </ul>
             </div>
