--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -584,15 +584,19 @@
             </div>
             <div class="col-xs-7">
                 <ul class="list-inline pull-right">
-                    <li><a href="#"><img src="images/icon-bird.png"></a>
+                    <li><a href="https://twitter.com/PalletOne_org" target="view_window"><img src="images/icon-bird.png"></a>
                     </li>
-                    <li><a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"></a>
+                    <li><a href="https://www.facebook.com/profile.php?id=100026164972741" target="view_window"><img src="images/icon-f.png"></a>
                     </li>
-                    <li><a href="https://t.me/palletchinese"><img src="images/telegram.png"></a>
+                    <li><a href="https://t.me/palletchinese" target="view_window"><img src="images/telegram.png"></a>
                     </li>
-					<li><a href="https://pallet.one/wap/images/QRcode.jpg"><img src="images/wechat.png"></a>
+                    <li id="qq" style="position: relative">
+                        <div style="width: 100px;height:100px;position: absolute;top:-115px;left:-36px;z-index: 999;display: none;" id="showWx">
+                            <img src="../images/QRcode.jpg" width="100%" height="100%">
+                        </div>
+                        <img src="images/wechat.png"  width="30" height="30" id="wx" style="cursor: pointer">
                     </li>
-					<li><a href="https://github.com/PalletOne"><img src="images/github.png"></a>
+					<li><a href="https://github.com/PalletOne" target="view_window"><img src="images/github.png"></a>
                     </li>
                 </ul>
             </div>
