add notice module

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ browserRedirect();
                 <li><a  rel="Features">Features</a></li>
                 <li><a  rel="Timeline">Timeline</a></li>
                 <li><a  rel="Team">Team</a></li>
-                <li><a  rel="QA">Q&A </a></li>
+                <li><a  rel="QA">Q&A</a></li>
+                <li><a  rel="Notice">Notice</a></li>
                 <li><input type="btn" class="change-btn" readonly="readonly" onclick="javascript:window.location.href='index_zh_cn.html';" value="中文"></button></li>
             </ul>
         </div>
@@ -497,6 +498,26 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
         <!-- </div> -->
     </div>
 </div>
+<div class="wrap1200 QA" id="Notice">
+    <div class="g-title">Notice</div>
+    <div class="row">
+        <div class="col-lg-6 features-text wow fadeInUp animated" style="width:590px; margin-right:50px">
+            <h2><a href="#">Notice 1</a></h2>
+        </div>
+        <div class="col-lg-6 features-text wow fadeInUp animated" style="width:490px; margin:40px 0 0 10px;">
+            <h2><a href="#">Notice 2</a></h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 features-text wow fadeInUp animated" style="width:590px; margin-right:50px; height:auto;">
+            <h2><a href="#">Notice 3</a></h2>
+        </div>
+        <!-- <div class="col-lg-6 features-text wow fadeInUp animated" style="width:490px; margin:40px 0 0 10px; height:auto;"> -->
+            <!-- <h2>Is there any video to show how PalletOne protocol works?</h2> -->
+            <!-- <p>A preliminary video is here.</p> -->
+        <!-- </div> -->
+    </div>
+</div>
 
 <!-- <div class="wrap1200"> -->
 	<!-- <div class="vadio"> -->
@@ -536,6 +557,9 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
                     </li>
 					<li id="qq">
 						<a href="https://github.com/PalletOne" target="view_window"><img src="images/github.png"  width="30" height="30"></a>
+                    </li>
+                    <li id="qq">
+                        <a href="http://palletone.club" target="view_window"><img src="images/icon-forum.png"  width="30" height="30"></a>
                     </li>
                 </ul>
             </div>
