--- a/wap/index.html
+++ b/wap/index.html
@@ -76,6 +76,7 @@
                         <li><a class="page-scroll" href="#Timeline">Timeline</a></li>
                         <li><a class="page-scroll" href="#Team">Team</a></li>
                         <li><a class="page-scroll" href="#QA">Q&A </a></li>
+                        <li><a class="page-scroll" href="#Notice">Notice</a></li>
                         <li><a class="page-scroll" href="index_zh_cn.html">中文 </a></li>
                     </ul>
                 </div>
@@ -542,6 +543,34 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
     </div>
 
 </section>
+<section class="features" id="Notice">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h1 class="g-title"> Notice </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 features-text">
+                <h2><a href="#">Notice 1</a></h2>
+
+            </div>
+            <div class="col-lg-6 features-text">
+                <h2><a href="#">Notice 2</a></h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 features-text">
+                <h2><a href="#">Notice 3</a></h2>
+            </div>
+            <!-- <div class="col-lg-6 features-text"> -->
+                <!-- <h2>Is there any video to show how PalletOne protocol works?</h2> -->
+                <!-- <p>A preliminary video is here.</p> -->
+            <!-- </div> -->
+        </div>
+    </div>
+
+</section>
 <!-- <section> -->
 	<!-- <div class="container"> -->
     	<!-- <div class="row"> -->
@@ -598,6 +627,8 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
                         <img src="images/wechat.png"  width="30" height="30" id="wx" style="cursor: pointer">
                     </li>
 					<li><a href="https://github.com/PalletOne" target="view_window"><img src="images/github.png"></a>
+                    </li>
+                    <li><a href="http://palletone.club" target="view_window"><img src="images/icon-forum.png"  width="30" height="30"></a>
                     </li>
                 </ul>
             </div>
