--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -75,7 +75,8 @@
                         <li><a class="page-scroll" href="#pallet">特性</a></li>
                         <li><a class="page-scroll" href="#Timeline">蓝图</a></li>
                         <li><a class="page-scroll" href="#Team">团队</a></li>
-                        <li><a class="page-scroll" href="#QA">问答 </a></li>
+                        <li><a class="page-scroll" href="#QA">问答</a></li>
+                        <li><a class="page-scroll" href="#Notice">公告</a></li>
                         <li><a class="page-scroll" href="index.html">English </a></li>
                     </ul>
                 </div>
@@ -541,6 +542,33 @@
     </div>
 
 </section>
+<section class="features" id="Notice">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h1 class="g-title"> 公告 </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 features-text">
+                <h2><a href="#">公告一</a></h2>
+            </div>
+            <div class="col-lg-6 features-text">
+                <h2><a href="#">公告二</a></h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 features-text">
+                <h2><a href="#">公告三</a></h2>
+            </div>
+            <!-- <div class="col-lg-6 features-text"> -->
+                <!-- <h2>是否有展示PalletOne操作的影片?</h2> -->
+                <!-- <p>可以观看下方非正式版的解释影片</p> -->
+            <!-- </div> -->
+        </div>
+    </div>
+
+</section>
 <!-- <section> -->
 	<!-- <div class="container"> -->
     	<!-- <div class="row"> -->
@@ -597,6 +625,8 @@
                         <img src="images/wechat.png"  width="30" height="30" id="wx" style="cursor: pointer">
                     </li>
 					<li><a href="https://github.com/PalletOne" target="view_window"><img src="images/github.png"></a>
+                    </li>
+                    <li><a href="http://palletone.club" target="view_window"><img src="images/icon-forum.png"  width="30" height="30"></a>
                     </li>
                 </ul>
             </div>
