--- a/wap/index.html
+++ b/wap/index.html
@@ -76,7 +76,7 @@
                         <li><a class="page-scroll" href="#Timeline">Timeline</a></li>
                         <li><a class="page-scroll" href="#Team">Team</a></li>
                         <li><a class="page-scroll" href="#QA">Q&A </a></li>
-                        <li><a class="page-scroll" href="#Notice">Notice</a></li>
+                        <li><a  href="http://palletone.club/" target="_blank">Notice</a></li>
                         <li><a class="page-scroll" href="index_zh_cn.html">中文 </a></li>
                     </ul>
                 </div>
@@ -534,34 +534,6 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
             <div class="col-lg-6 features-text">
                 <h2>What do you mean by decoupling contract?</h2>
                 <p>Decoupling Contract means that the contract execution is decoupled from the blockchain beneath and is done at PalletOne level. After execution, contract states are stored in the Jury and/or the blockchain beneath.</p>
-            </div>
-            <!-- <div class="col-lg-6 features-text"> -->
-                <!-- <h2>Is there any video to show how PalletOne protocol works?</h2> -->
-                <!-- <p>A preliminary video is here.</p> -->
-            <!-- </div> -->
-        </div>
-    </div>
-
-</section>
-<section class="features" id="Notice">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1 class="g-title"> Notice </h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 features-text">
-                <h2><a href="#">Notice 1</a></h2>
-
-            </div>
-            <div class="col-lg-6 features-text">
-                <h2><a href="#">Notice 2</a></h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 features-text">
-                <h2><a href="#">Notice 3</a></h2>
             </div>
             <!-- <div class="col-lg-6 features-text"> -->
                 <!-- <h2>Is there any video to show how PalletOne protocol works?</h2> -->
