--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -76,7 +76,7 @@
                         <li><a class="page-scroll" href="#Timeline">蓝图</a></li>
                         <li><a class="page-scroll" href="#Team">团队</a></li>
                         <li><a class="page-scroll" href="#QA">问答</a></li>
-                        <li><a class="page-scroll" href="#Notice">公告</a></li>
+                        <li><a  href="http://palletone.club/" target="_blank">公告</a></li>
                         <li><a class="page-scroll" href="index.html">English </a></li>
                     </ul>
                 </div>
@@ -533,33 +533,6 @@
             <div class="col-lg-6 features-text">
                 <h2>什么是合约的分离?</h2>
                 <p> 合约分离意味着合约的执行会从下方的区块链分离开而由 PalletOne 执行。合约经过执行验证后，合约的信息将会存储到陪审团成员内部和/或合约涉及的区块链中。</p>
-            </div>
-            <!-- <div class="col-lg-6 features-text"> -->
-                <!-- <h2>是否有展示PalletOne操作的影片?</h2> -->
-                <!-- <p>可以观看下方非正式版的解释影片</p> -->
-            <!-- </div> -->
-        </div>
-    </div>
-
-</section>
-<section class="features" id="Notice">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1 class="g-title"> 公告 </h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 features-text">
-                <h2><a href="#">公告一</a></h2>
-            </div>
-            <div class="col-lg-6 features-text">
-                <h2><a href="#">公告二</a></h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 features-text">
-                <h2><a href="#">公告三</a></h2>
             </div>
             <!-- <div class="col-lg-6 features-text"> -->
                 <!-- <h2>是否有展示PalletOne操作的影片?</h2> -->
