modify teams and fix bugs

--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -42,7 +42,7 @@ ui,#qq{display:inline}
                 <li><a  rel="Timeline">蓝图</a></li>
                 <li><a  rel="Team">团队</a></li>
                 <li><a  rel="QA">问答</a></li>
-                <li><a  href="http://palletone.club/" target="_blank">公告</a></li>
+                <li><a  href="http://palletone.club/forum.php?mod=forumdisplay&fid=73" target="_blank">公告</a></li>
                 <li><input type="btn" class="change-btn" readonly="readonly" onclick="javascript:window.location.href='index.html';" value="English"></button></li>
             </ul>
         </div>
@@ -328,7 +328,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/zhupeijiang.jpg"  class="img-responsive img-circle img-small" alt="">
-                <h4>朱佩江<br><span class="blue-txt">PalletOne联合创始、CEO，中关村区块链产业联盟秘书长</span></h4>
+                <h4>朱佩江<br><span class="blue-txt">PalletOne联合创始、CEO<br>中关村区块链产业联盟秘书长</span></h4>
                 <div class="tex">
                     <h2>朱佩江</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1998年毕业于清华大学电子工程系，在网络、视频、及区块链技术领域拥有近十年的丰富研究经验。曾担任国家级研究所副所长，教授级高级工程师。
@@ -340,7 +340,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
                 <img src="images/jones.png"  class="img-responsive img-circle img-small" alt="">
-                <h4>Matthew Jones<br><span class="blue-txt">PalletOne联合创始人</span></h4>
+                <h4>Matthew Jones<br><span class="blue-txt">PalletOne联合创始人<br>负责微软公司的商业策划</span></h4>
                 <div class="tex">
                     <h2>Matthew Jones</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne联合创始人，负责微软公司的商业策划。Matthew Jons同时是美国得克萨斯州大学奥斯丁分校硕士。
@@ -486,7 +486,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
                 <img src="images/guolihua.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>郭立华<br><span class="blue-txt">PalletOne高级工程师，虚拟机及合约管理模块负责人</span></h4>
+                <h4>郭立华<br><span class="blue-txt">PalletOne高级工程师<br>虚拟机及合约管理模块负责人</span></h4>
                 <div class="tex">
                     <h2>郭立华</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;从事互联网、广电行业软件研发、架构设计以及多年技术管理工作，对fabric、比特币等区块链有深入的研究与实际开发经验。</p>
@@ -508,7 +508,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
                 <img src="images/yangjie.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>杨杰<br><span class="blue-txt">PalletOne开发工程师，分布式存储DAG及内存管理模块支持</span></h4>
+                <h4>杨杰<br><span class="blue-txt">PalletOne开发工程师<br>分布式存储DAG及内存管理模块支持</span></h4>
                 <div class="tex">
                     <h2>杨杰</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;毕业于北京化工大学计算机专业 ，长期从事go语言后端开发，对区块链底层原理与架构设计有深刻了解。</p>
@@ -519,7 +519,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
                 <img src="images/gouguangquan.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>苟光泉<br><span class="blue-txt">PalletOne核心开发工程师，共识算法模块负责人</span></h4>
+                <h4>苟光泉<br><span class="blue-txt">PalletOne核心开发工程师<br>共识算法模块负责人</span></h4>
                 <div class="tex">
                     <h2>苟光泉</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;熟悉多种前后端技术、多年C++研发经验，参与多个行业的应用软件研发，对BitShares及DPoS共识有深入地研究。</p>
@@ -530,7 +530,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/zhangxiangli.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>张祥利<br><span class="blue-txt">PalletOne高级核心开发工程师，各底层链交易适配器模式负责人</span></h4>
+                <h4>张祥利<br><span class="blue-txt">PalletOne高级核心开发工程师<br>各底层链交易适配器模式负责人</span></h4>
                 <div class="tex">
                     <h2>张祥利</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;拥有九年c/cpp开发经验。熟悉加解密算法、比特币，对数据结构和算法有较深入的理解，区块链热爱者，技术极客。</p>
@@ -541,7 +541,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
                 <img src="images/wangligang.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>王立刚<br><span class="blue-txt">PalletOne高级开发工程师，底层链数据API及钱包服务模块负责人</span></h4>
+                <h4>王立刚<br><span class="blue-txt">PalletOne高级开发工程师<br>底层链数据API及钱包服务模块负责人</span></h4>
                 <div class="tex">
                     <h2>王立刚</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中国石油大学(北京)硕士，拥有数据通信、大数据、区块链、微服务相关开发经验，并投身于经济学研究。</p>
@@ -552,7 +552,7 @@ ui,#qq{display:inline}
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
                 <img src="images/wuzhiyuan.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>吴志远<br><span class="blue-txt">PalletOne高级开发工程师，系统合约模块负责人</span></h4>
+                <h4>吴志远<br><span class="blue-txt">PalletOne高级开发工程师<br>系统合约模块负责人</span></h4>
                 <div class="tex">
                     <h2>吴志远</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;北京邮电大学MBA，拥有多年区块链投资和实践经验，专注技术的同时，研究区块链的社会学和经济学意义。</p>
@@ -627,7 +627,7 @@ ui,#qq{display:inline}
     <div class="testimonials-text wow bounceIn animated" width="600">
         <img src="images/yuandaoziben.png" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/funds.png" height="120" width="120" style="margin:0px 10px 0px 0px">
-        <img src="images/1.png" height="120" width="120" style="margin:0px 10px 0px 0px">
+        <img src="images/yinli.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/7.png" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/6.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/8.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
