--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ browserRedirect();
                 <li><a  rel="Timeline">Timeline</a></li>
                 <li><a  rel="Team">Team</a></li>
                 <li><a  rel="QA">Q&A</a></li>
-                <li><a  href="http://palletone.club/" target="_blank">Notice</a></li>
+                <li><a  href="http://palletone.club/forum.php?mod=forumdisplay&fid=73" target="_blank">Announcement</a></li>
                 <li><input type="btn" class="change-btn" readonly="readonly" onclick="javascript:window.location.href='index_zh_cn.html';" value="中文"></button></li>
             </ul>
         </div>
@@ -373,7 +373,7 @@ Acquired master degaree from the university of Texas at Austin.
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
                 <img src="images/zengyi.jpg"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
-                <h4>Yi Zeng<br><span class="blue-txt">PalletOne Co-founder, CTO</span></h4>
+                <h4>Yi Zeng<br><span class="blue-txt">PalletOne Co-founder&CTO</span></h4>
                 <div class="tex">
                     <h2>Yi Zeng</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Database expert, author of "SQL Server database technical handbook",work and research in database application, data warehouse, big data and blockchain technology. developed on Fabric.
@@ -385,7 +385,7 @@ Acquired master degaree from the university of Texas at Austin.
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/wangcuicui.jpg"  class="img-responsive img-circle img-small" width="100px" height="100px" alt="" >
-                <h4>Cuicui Wang<br><span class="blue-txt">PalletOne Co-founder, System Analyst</span></h4>
+                <h4>Cuicui Wang<br><span class="blue-txt">PalletOne Co-founder&System Analyst</span></h4>
                 <div class="tex">
                     <h2>Cuicui Wang</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M.A. of Beijing University of Posts and Telecommunications,worked in Baidu and subordinate research institution of certain state management department. Expert at research of network security, network traffic analysis as well as blockchain technology.</p>
@@ -431,10 +431,10 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
                 <img src="images/shiningning.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Ningning Shi<br><span class="blue-txt">PalletOne团队运维专家</span></h4>
+                <h4>Ningning Shi<br><span class="blue-txt">Specialist of PalletOne</span></h4>
                 <div class="tex">
                     <h2>Ningning Shi</h2>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;爱尔兰都柏林理工大学计算机信息技术管理学士学位，中国云体系产业创新战略联盟业务拓展部部长，中国人工智能产业发展联盟媒体项目组专家委员会委员，原微软总部资深项目经理。擅长战略规划、项目运营、软件开发、管理、运维以及全球化部署。</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Specialist of PalletOne.</p>
                 </div>
                 <!-- <p class="text-left">中关村区块链产业联盟秘书长1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师，熟悉区块链底层链技术和共识算法、通证经济模型设计。 </p> -->
             </div>
@@ -445,7 +445,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
                 <h4>Xiaojun Mao<br><span class="blue-txt">PalletOne CMO</span></h4>
                 <div class="tex">
                     <h2>Xiaojun Mao</h2>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中关村区块链产业联盟高级市场顾问，星环创世传（北京）媒科技有限公司CEO。法国雷恩高等商学院MSC管理学硕士。曾任职于北京邮电大学经济管理学院DBA办公室。</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne CMO.</p>
                 </div>
                 <!-- <p class="text-left">中关村区块链产业联盟秘书长1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师，熟悉区块链底层链技术和共识算法、通证经济模型设计。 </p> -->
             </div>
@@ -453,10 +453,10 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/liudonghai.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Donghai Liu<br><span class="blue-txt">PalletOne 运营总监</span></h4>
+                <h4>Donghai Liu<br><span class="blue-txt">PalletOne Marketing Director</span></h4>
                 <div class="tex">
                     <h2>Donghai Liu</h2>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中关村区块链产业联盟高级市场总监，星环创世（北京）传媒科技有限公司执行董事，和拓（北京）商业管理公司总经理。</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne Marketing Director.</p>
                 </div>
                 <!-- <p class="text-left">中关村区块链产业联盟秘书长1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师，熟悉区块链底层链技术和共识算法、通证经济模型设计。 </p> -->
             </div>
@@ -486,10 +486,10 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/zhangzheng.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Zheng Zhang<br><span class="blue-txt">PalletOne 运营经理</span></h4>
+                <h4>Zheng Zhang<br><span class="blue-txt">PalletOne Marketing Manager</span></h4>
                 <div class="tex">
                     <h2>Zheng Zhang</h2>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;星环创世（北京）传媒科技有限公司COO。</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne Marketing Manager.</p>
                 </div>
                 <!-- <p class="text-left">中关村区块链产业联盟秘书长1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师，熟悉区块链底层链技术和共识算法、通证经济模型设计。 </p> -->
             </div>
@@ -508,7 +508,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
                 <img src="images/guolihua.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Lihua Guo<br><span class="blue-txt">PalletOne senior engineer, leader of virtual machine and contract management module</span></h4>
+                <h4>Lihua Guo<br><span class="blue-txt">PalletOne senior engineer<br>leader of virtual machine and contract management module</span></h4>
                 <div class="tex">
                     <h2>Lihua Guo</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Engaged in software development, architecture design and multi-year technical management of the Internet and broadcasting industry. Has in-depth research and practical development experience on blockchains such as fabric and bitcoin.</p>
@@ -530,7 +530,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
                 <img src="images/yangjie.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Jie Yang<br><span class="blue-txt">PalletOne development engineer,  storage DAG and memory management</span></h4>
+                <h4>Jie Yang<br><span class="blue-txt">PalletOne development engineer<br>storage DAG and memory management</span></h4>
                 <div class="tex">
                     <h2>Jie Yang</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduated from Beijing university of chemical technology, majoring in computer science, I have been engaged in the development of the back-end of go language for a long time, and have a deep understanding of the basic elements and design of block chain.</p>
@@ -541,7 +541,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
                 <img src="images/gouguangquan.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Albert·Gou<br><span class="blue-txt">PalletOne core development engineer, leader of consensus algorithm module</span></h4>
+                <h4>Albert·Gou<br><span class="blue-txt">PalletOne core development engineer<br>leader of consensus algorithm module</span></h4>
                 <div class="tex">
                     <h2>Albert·Gou</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Familiar with a variety of front-end and back-end technology, many years of C++ language research and development experience, participate in application software development in multiple industries, and have in-depth research on BitShares and DPoS consensus.</p>
@@ -552,7 +552,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/zhangxiangli.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Xiangli Zhang<br><span class="blue-txt">PalletOne Senior Core R&D Engineer, manager of the underlying chain transaction adapter model</span></h4>
+                <h4>Xiangli Zhang<br><span class="blue-txt">PalletOne Senior Core R&D Engineer<br>manager of the underlying chain transaction adapter model</span></h4>
                 <div class="tex">
                     <h2>Xiangli Zhang</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;With years of experience in C / CPP development, familiar with encryption and decryption algorithms, bitcoin, data structure and algorithms have a deeper understanding, block chain lover.</p>
@@ -563,7 +563,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
                 <img src="images/wangligang.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Ligang Wang<br><span class="blue-txt">PalletOne Senior Development Engineer, leader of chain data API and wallet service module</span></h4>
+                <h4>Ligang Wang<br><span class="blue-txt">PalletOne Senior Development Engineer<br>leader of chain data API and wallet service module</span></h4>
                 <div class="tex">
                     <h2>Ligang Wang</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master degree from China University of Petroleum (Beijing), with experience in data communications, big data, block chains, micro-services related development, and engaged in economic research.</p>
@@ -574,7 +574,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
                 <img src="images/wuzhiyuan.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Zhiyuan Wu<br><span class="blue-txt">PalletOne Senior Development Engineer, head of system contract module</span></h4>
+                <h4>Zhiyuan Wu<br><span class="blue-txt">PalletOne Senior Development Engineer<br>head of system contract module</span></h4>
                 <div class="tex">
                     <h2>Zhiyuan Wu</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduated from Beijing University of Posts and Telecommunications, MBA. Engaged in block chain investment and Practice for many years. Focus on technology and study the sociological and economic significance of blockchain.</p>
@@ -631,7 +631,7 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
     <div class="testimonials-text wow bounceIn animated" width="600">
         <img src="images/yuandaoziben.png" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/funds.png" height="120" width="120" style="margin:0px 10px 0px 0px">
-        <img src="images/1.png" height="120" width="120" style="margin:0px 10px 0px 0px">
+        <img src="images/yinli.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/7.png" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/6.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
         <img src="images/8.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
