--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
                 <h4>Xiaojun Mao<br><span class="blue-txt">PalletOne CMO</span></h4>
                 <div class="tex">
                     <h2>Xiaojun Mao</h2>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne CMO.</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As Senior Market Consultant for Blockchain Industrial Alliance of Zhongguancun , as CEO of STARTHALO (Beijing) Media Technology Co., Ltd. as master of management of MSC, ESC Rennes School of Business, France. Having worked in the Economic Management College for DBA Office of Beijing University of Posts and Telecommunications.</p>
                 </div>
                 <!-- <p class="text-left">中关村区块链产业联盟秘书长1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师，熟悉区块链底层链技术和共识算法、通证经济模型设计。 </p> -->
             </div>
@@ -453,10 +453,10 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/liudonghai.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Donghai Liu<br><span class="blue-txt">PalletOne Marketing Director</span></h4>
+                <h4>Donghai Liu<br><span class="blue-txt">PalletOne director of operation</span></h4>
                 <div class="tex">
                     <h2>Donghai Liu</h2>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne Marketing Director.</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As Senior Market Director for Blockchain Industrial Alliance of Zhonggancun, as executive director of STARTHALO (Beijing) Media Technology Co., Ltd., and general manager of Harmony Totem (Beijing) Commercial Management Co.,Ltd.</p>
                 </div>
                 <!-- <p class="text-left">中关村区块链产业联盟秘书长1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师，熟悉区块链底层链技术和共识算法、通证经济模型设计。 </p> -->
             </div>
@@ -486,10 +486,10 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/zhangzheng.jpg"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Zheng Zhang<br><span class="blue-txt">PalletOne Marketing Manager</span></h4>
+                <h4>Zheng Zhang<br><span class="blue-txt">alletOne manager of operation</span></h4>
                 <div class="tex">
                     <h2>Zheng Zhang</h2>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne Marketing Manager.</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COO for STARTHALO (Beijing) Media Technology Co., Ltd.</p>
                 </div>
                 <!-- <p class="text-left">中关村区块链产业联盟秘书长1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师，熟悉区块链底层链技术和共识算法、通证经济模型设计。 </p> -->
             </div>
